--- a/cn/index.html
+++ b/cn/index.html
@@ -365,12 +365,14 @@
             } else if (page === 'contact') {
                 newContent = `
                     <div class="card">
-                    <h2>项目</h2>
-                    <p>我的其他的项目（镜像网站中不要输入个人敏感信息</p>
+                    <h2>镜像网站</h2>
+                    <p>镜像网站(不要输入个人敏感信息</p>
                     <p>- 简单英语维基百科镜像网站｜<a href="https://s.joyance.page" class="article-link" target="_blank">前往</a></p>
                     <p>- 中文维基百科镜像网站｜<a href="https://w.joyance.page" class="article-link" target="_blank">前往</a></p>
-                    <p>- 原子云模型｜<a href="https://atom.joyance.page" class="article-link" target="_blank">前往</a></p>
-                    <p>- 起始页：｜<a href="https://start.joyance.page" class="article-link" target="_blank">前往</a></p>
+                </div>
+                <div class="card">
+                    <h2>我的主页</h2>
+                    <p><a href="https://joyance.page" class="article-link" target="_blank">前往</a></p>
                 </div>
                 <div class="card">
                     <h2>联系</h2>
