--- a/cn/index.html
+++ b/cn/index.html
@@ -311,7 +311,7 @@
 </head>
 <body>
     <header>
-        <h1 id="headerTitle">Joyance的博客</h1>
+        <h1 id="headerTitle"><a href="https://joyance.page" class="article-link" target="_blank">Joyance</a>的博客</h1>
         <div id="search-container">
             <input type="text" id="search-input" placeholder="搜索..." oninput="search()">
             <div id="search-results"></div>
