--- a/en/index.html
+++ b/en/index.html
@@ -325,7 +325,8 @@
 
     <div class="container" id="content">
     </div>
-
+	
+<script src="https://cdn.jsdelivr.net/npm/pinyin-pro@3.13.2/dist/index.js"></script>
 <script>
     let articles = [
 	{ title: 'Incomplete Information is Misleading', content: 'The internet is full of false information and rumors, and their harmful effects are obvious. However, you may not know that information composed entirely of facts can also be misleading. This', pinned: false, wordCount: 939, url: 'https://aaag-en.pages.dev/' },
