--- a/en/index.html
+++ b/en/index.html
@@ -354,8 +354,7 @@
                             <h3>${article.title}</h3>
                             <div class="article-preview">${previewContent}</div>
                             <div class="article-info">
-                                Word count：${wordCount} | time may spend：${readingTime}min |
-                            <a href="${article.url}" class="article-link" target="_blank">Read</a>
+                                Word count：${wordCount} | time may spend：${readingTime}min | <a href="${article.url}" class="article-link" target="_blank">Read</a>
                             </div>
                         </div>
                     `;
