--- a/cn/index.html
+++ b/cn/index.html
@@ -376,6 +376,10 @@
                     <p>session账号：<button class="copy-button" onclick="copyToClipboard('05e375a6c4dac6fd710ba46c15b07637ca0048d656d8b7a2a4e10c83270655440d')">复制</button></p>
                     <p>推特账号：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">复制</button></p>
                 </div>
+                <div class="card">
+                    <h2>语言</h2>
+                    <p><a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
+                </div>
                 `;
             }
             content.innerHTML = newContent;
