--- a/cn/index.html
+++ b/cn/index.html
@@ -378,7 +378,7 @@
                 </div>
                 <div class="card">
                     <h2>语言</h2>
-                    <p><a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
+                    <p>此网页还支持<a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
                 </div>
                 `;
             }
