--- a/cn/index.html
+++ b/cn/index.html
@@ -374,7 +374,7 @@
                     <h2>联系</h2>
                     <p>邮箱：me@joyance.page <button class="copy-button" onclick="copyToClipboard('me@joyance.page')">复制</button></p>
                     <p>session账号：<button class="copy-button" onclick="copyToClipboard('05e375a6c4dac6fd710ba46c15b07637ca0048d656d8b7a2a4e10c83270655440d')">复制</button></p>
-                    <p>推特账号：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">复制</button></p>
+                    <p>𝕏 账号：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">复制</button></p>
                 </div>
                 <div class="card">
                     <h2>语言</h2>
