--- a/cn/index.html
+++ b/cn/index.html
@@ -380,6 +380,10 @@
                     <p>session账号：<button class="copy-button" onclick="copyToClipboard('05e375a6c4dac6fd710ba46c15b07637ca0048d656d8b7a2a4e10c83270655440d')">复制</button></p>
                     <p>𝕏 账号：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">复制</button></p>
                 </div>
+                <h2>版本</h2>
+                    <p>5.0 </p>
+                    <p>其他版本：<a href="https://testblog-6yi.pages.dev/#" class="article-link">无js版</a>｜<a href="https://blog.joyance.page/" class="article-link">4.5</a>｜<a href="https://blog-cn.joyance.page/" class="article-link">4.0</a></p>
+                </div>
                 `;
             }
             content.innerHTML = newContent;
