--- a/cn/index.html
+++ b/cn/index.html
@@ -325,6 +325,14 @@
                 transform: translateY(0);
             }
         }
+
+        .animate-up {
+            animation: slideInUp 0.5s forwards;
+        }
+
+        .animate-down {
+            animation: slideInDown 0.5s forwards;
+        }
     </style>
 </head>
 <body>
@@ -355,9 +363,6 @@
         { title: '网约车的垄断租', content: '今天坐网约车回家的路上,网约车司机跟我聊了很多网约车对司机的不公的对待,我也由此产生一些想法。这位司机自称是开了五年出租车,又开了七年网约车(具体数字记不清了,大概就是)\n起因是我打车的地方位于经常堵车的地方,上车后司机就开始抱怨导航一定要导到这条路上,称如果可以灵活一点,如果可以让我往前走点,就可以避开前方的拥堵。对于乘客和司机都有益。但是平台的要求就是要根据导航到达目的地才能接送乘客。否则就会', pinned: false, wordCount: 3000, url: 'https://aaac-cn.pages.dev/', mark: '观点' },
         { title: '开启我的个人博客', content: '这是我的第一个个人博客,没有买单独的域名,功能也不齐全(换行的显示还不支持),而且文章是直接存在网页前端程序里的(太简陋了),但是目前应该够用了。 \n\n将来的打算是,这个平台作为我发布我文章的地方。微信公众号和知乎我也会同步跟进。', pinned: false, wordCount: 452, url: 'https://aaab-cn.pages.dev/', mark: '介绍' },
     ];
-
-    let cards = [];
-    let lastScrollTop = 0;
 
     function showPage(page) {
         let content = document.getElementById('content');
@@ -416,18 +421,8 @@
             content.classList.remove('fade-out');
             content.classList.add('fade-in');
 
-            // 重新获取.cards元素
-            cards = document.querySelectorAll('.card');
-
-            // 为每个卡片添加动画结束事件，确保动画可重复
-            cards.forEach(card => {
-                card.addEventListener('animationend', () => {
-                    card.style.animation = '';
-                });
-            });
-
-            // 页面加载时触发一次滚动事件，显示初始动画
-            window.dispatchEvent(new Event('scroll'));
+            // 初始化动画
+            initAnimations();
 
         }, 300);
     }
@@ -484,23 +479,40 @@
         window.open(url, '_blank');
     }
 
-    // 添加滚动事件监听
-    window.addEventListener('scroll', () => {
-        let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-        cards.forEach(card => {
-            const rect = card.getBoundingClientRect();
-            if (rect.top <= window.innerHeight && rect.bottom >= 0) {
-                if (scrollTop > lastScrollTop) {
-                    // 向下滚动
-                    card.style.animation = 'slideInUp 0.5s forwards';
-                } else {
-                    // 向上滚动
-                    card.style.animation = 'slideInDown 0.5s forwards';
+    function initAnimations() {
+        const cards = document.querySelectorAll('.card');
+        const options = {
+            threshold: 0.1
+        };
+        let lastScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    if (scrollTop > lastScrollTop) {
+                        // 向下滚动
+                        entry.target.classList.add('animate-up');
+                    } else {
+                        // 向上滚动
+                        entry.target.classList.add('animate-down');
+                    }
+                    lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+                    // 取消观察，防止重复动画
+                    observer.unobserve(entry.target);
                 }
-            }
+            });
+        }, options);
+
+        cards.forEach(card => {
+            observer.observe(card);
+            // 清除动画类，以便在重新进入视口时重新添加动画
+            card.addEventListener('animationend', () => {
+                card.classList.remove('animate-up', 'animate-down');
+                observer.observe(card);
+            });
         });
-        lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
-    });
+    }
 
     document.addEventListener('click', function(event) {
         const searchResults = document.getElementById('search-results');
