--- a/cn/index.html
+++ b/cn/index.html
@@ -31,25 +31,15 @@
             z-index: 999; /* 确保在最上层 */
         }
 
-        /* 为了实现模糊效果，给.fixed-header添加背景色和透明度 */
+        /* 为.fixed-header添加渐变背景 */
         .fixed-header {
-            background-color: rgba(255, 255, 255, 0.8);
-            backdrop-filter: none;
-            transition: backdrop-filter 0.3s, background-color 0.3s;
-        }
-
-        /* 滚动时添加的模糊效果 */
-        .fixed-header.blur {
-            backdrop-filter: blur(8px);
-            background-color: rgba(255, 255, 255, 0.5);
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1));
+            transition: background 0.3s;
         }
 
         @media (prefers-color-scheme: dark) {
             .fixed-header {
-                background-color: rgba(30, 30, 30, 0.8);
-            }
-            .fixed-header.blur {
-                background-color: rgba(30, 30, 30, 0.5);
+                background: linear-gradient(to bottom, rgba(30, 30, 30, 0.5), rgba(30, 30, 30, 1));
             }
         }
 
@@ -495,24 +485,6 @@
             observer.observe(card);
         });
     }
-
-    // 监听滚动事件，添加或移除模糊效果
-    window.addEventListener('scroll', function() {
-        const fixedHeader = document.getElementById('fixedHeader');
-        if (window.scrollY > 50) {
-            fixedHeader.classList.add('blur');
-        } else {
-            fixedHeader.classList.remove('blur');
-        }
-    });
-
-    document.addEventListener('click', function(event) {
-        const searchResults = document.getElementById('search-results');
-        const searchInput = document.getElementById('search-input');
-        if (event.target !== searchInput && !searchResults.contains(event.target)) {
-            searchResults.style.display = 'none';
-        }
-    });
 
     // 初始化页面
     showPage('home');
