--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
-    | © this is a personal webside, all rights reserved by Joyance, the owner.
 <head>
+    <!-- © this is a personal website, all rights reserved by Joyance, the owner. -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyance's blog</title>
@@ -21,30 +21,36 @@
                 color: #E0E0E0;
             }
         }
+
+        /* 固定头部容器 */
+        .fixed-header {
+            position: fixed; /* 固定定位 */
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 999; /* 确保在最上层 */
+            /* 更新后的渐变背景，从不透明到透明 */
+            background: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0.615));
+            transition: background 0.3s;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            .fixed-header {
+                background: linear-gradient(to bottom, rgba(30, 30, 30, 1), rgba(30, 30, 30, 0));
+            }
+        }
+
         header {
-            background-color: #FFFFFF;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             padding: 16px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            transition: background-color 0.3s;
         }
-        @media (prefers-color-scheme: dark) {
-            header {
-                background-color: #1E1E1E;
-            }
-        }
+
         nav {
-            background-color: #FFFFFF;
             padding: 8px 16px;
-            transition: background-color 0.3s;
         }
-        @media (prefers-color-scheme: dark) {
-            nav {
-                background-color: #1E1E1E;
-            }
-        }
+
         nav a {
             color: #212121;
             text-decoration: none;
@@ -61,6 +67,7 @@
             padding: 16px;
             max-width: 1200px;
             margin: 0 auto;
+            margin-top: 128px; /* 避免内容被固定的头部和导航栏遮挡 */
         }
         .card {
             background-color: #FFFFFF;
@@ -68,21 +75,18 @@
             padding: 16px;
             margin-bottom: 16px;
             box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
             opacity: 0;
             transform: translateY(20px);
-        }
-        .card.show {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .card:hover {
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
         @media (prefers-color-scheme: dark) {
             .card {
                 background-color: #2C2C2C;
             }
+        }
+        .card.visible {
+            opacity: 1;
+            transform: translateY(0);
         }
         .article {
             margin-bottom: 16px;
@@ -273,6 +277,7 @@
 
             .container {
                 padding: 12px;
+                margin-top: 160px; /* 调整上边距，避免遮挡 */
             }
 
             .card {
@@ -299,47 +304,53 @@
         .fade-out {
             opacity: 0;
             transform: translateY(20px);
-            transition: opacity 0.3s, transform 0.3s;
+            transition: opacity 0.5s, transform 0.5s;
         }
 
         .fade-in {
             opacity: 1;
             transform: translateY(0);
-            transition: opacity 0.3s, transform 0.3s;
+            transition: opacity 0.5s, transform 0.5s;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1 id="headerTitle"><a href="https://joyance.page" class="article-link" target="_blank">Joyance</a>'s blog</h1>
-        <div id="search-container">
-            <input type="text" id="search-input" placeholder="search..." oninput="search()">
-            <div id="search-results"></div>
-        </div>
-    </header>
 
-<nav>
-        <a href="#" onclick="showPage('home')" id="navHome">home</a>
-        <a href="#" onclick="showPage('contact')" id="navContact">contact</a>
-    </nav>
+    <!-- 将 header 和 nav 包裹在 fixed-header 容器中 -->
+    <div class="fixed-header" id="fixedHeader">
+        <header>
+            <h1 id="headerTitle"><a href="https://joyance.page" class="article-link" target="_blank">Joyance</a>'s blog</h1>
+            <div id="search-container">
+                <input type="text" id="search-input" placeholder="search..." oninput="search()">
+                <div id="search-results"></div>
+            </div>
+        </header>
 
-    <div class="container" id="content">
-    </div>
-	
+        <nav>
+            <a href="#" onclick="showPage('home')" id="navHome">home</a>
+            <a href="#" onclick="showPage('contact')" id="navContact">contact</a>
+        </nav>
+    </div>
+
+    <div class="container" id="content">
+    </div>
+
 <script src="https://cdn.jsdelivr.net/npm/pinyin-pro@3.13.2/dist/index.js"></script>
 <script>
-    let articles = [
-	{ title: 'Incomplete Information is Misleading', content: 'The internet is full of false information and rumors, and their harmful effects are obvious. However, you may not know that information composed entirely of facts can also be misleading. This', pinned: false, wordCount: 939, url: 'https://aaag-en.pages.dev/' },
+    let articles = [
+    { title: 'Incomplete Information is Misleading', content: 'The internet is full of false information and rumors, and their harmful effects are obvious. However, you may not know that information composed entirely of facts can also be misleading. This', pinned: false, wordCount: 939, url: 'https://aaag-en.pages.dev/' },
 	{ title: 'About Privacy', content: 'Privacy is the ability of an individual or group to keep themselves or information about themselves from being shared or made public, allowing them to express themselves selectively. In the internet age, the methods and costs of invading ', pinned: false, wordCount: 1000, url: 'https://aaae-en.pages.dev/' },
 	{ title: '1984 - The Ultimate Form of Totalitarianism', content: 'I just finished reading the dystopian novel "1984" in its original version. I realized that it\'s truly worth reading the original. Other interpretations often compress the content of the original book, and some even distort it. For example, the classic slogans of the English Socialist ', pinned: false, wordCount: 2100, url: 'https://aaad-en.pages.dev/' },
 	{ title: 'The Monopoly of Chinese Ride-Hailing Services', content: 'Today, on my way home in a ride-hailing car, the driver told me about the unfair treatment they face. This got me thinking. The driver said he drove a taxi for five years and has been a ride-hailing driver', pinned: false, wordCount: 1000, url: 'https://aaac-en.pages.dev/' },
 	{ title: 'Starting My Personal Blog', content: 'This is my first personal blog. I haven\'t bought a separate domain, and the functionality is not complete (line breaks are not yet supported). The articles are directly stored in the frontend code (it', pinned: false, wordCount: 452, url: 'https://aaab-en.pages.dev/' },
-    ];
+
+];
 
     function showPage(page) {
         let content = document.getElementById('content');
+        content.classList.remove('fade-in');
         content.classList.add('fade-out');
-        
+
         setTimeout(() => {
             let newContent = '';
             if (page === 'home') {
@@ -350,7 +361,7 @@
                     const mark = article.mark;
                     const readingTime = Math.ceil(wordCount / 200); 
                     newContent += `
-                        <div class="card ${article.pinned ? 'pinned' : ''}">
+                        <div class="card">
                             <h3>${article.title}</h3>
                             <div class="article-preview">${previewContent}</div>
                             <div class="article-info">
@@ -361,37 +372,32 @@
                 });
             } else if (page === 'contact') {
                 newContent = `
-		<div class="card">
+                    <div class="card">
                     <h2>languages</h2>
                     <p>this is also available with <a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
                 </div>
                 <div class="card">
-                    <h2>contact</h2>
-		    <p>email：me@joyance.page <button class="copy-button" onclick="copyToClipboard('me@joyance.page')">copy</button></p>
-      <p>𝕏 account：@Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">copy</button></p>
-      <p>SessionID：<button class="copy-button" onclick="copyToClipboard('05e375a6c4dac6fd710ba46c15b07637ca0048d656d8b7a2a4e10c83270655440d')">copy</button></p>
-                </div>
+                    <h2>contact</h2>
+		    <p>email: me@joyance.page <button class="copy-button" onclick="copyToClipboard('me@joyance.page')">copy</button></p>
+      <p>𝕏 account: @Xixiphus_Jiayue <button class="copy-button" onclick="copyToClipboard('@Xixiphus_Jiayue')">copy</button></p>
+      <p>SessionID: <button class="copy-button" onclick="copyToClipboard('05e375a6c4dac6fd710ba46c15b07637ca0048d656d8b7a2a4e10c83270655440d')">copy</button></p>
+      </div>
                 `;
             }
             content.innerHTML = newContent;
             content.classList.remove('fade-out');
             content.classList.add('fade-in');
-            
-            setTimeout(() => {
-                const cards = document.querySelectorAll('.card');
-                cards.forEach((card, index) => {
-                    setTimeout(() => {
-                        card.classList.add('show');
-                    }, index * 100);
-                });
-            }, 50);
-        }, 300);
+
+            // 初始化动画
+            initAnimations();
+
+        }, 500); // 与 CSS 中的过渡时间匹配
     }
 
     function copyToClipboard(text) {
         navigator.clipboard.writeText(text).then(function() {
             let button = event.target;
-            button.textContent = 'done';
+            button.textContent = 'copied';
             button.classList.add('pulse');
             setTimeout(() => {
                 button.textContent = 'copy';
@@ -440,15 +446,28 @@
         window.open(url, '_blank');
     }
 
-    showPage('home');
+    function initAnimations() {
+        const cards = document.querySelectorAll('.card:not(.visible)');
+        const options = {
+            threshold: 0.1
+        };
 
-    document.addEventListener('click', function(event) {
-        const searchResults = document.getElementById('search-results');
-        const searchInput = document.getElementById('search-input');
-        if (event.target !== searchInput && !searchResults.contains(event.target)) {
-            searchResults.style.display = 'none';
-        }
-    });
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                    observer.unobserve(entry.target); // 只观察一次，防止重复触发动画
+                }
+            });
+        }, options);
+
+        cards.forEach(card => {
+            observer.observe(card);
+        });
+    }
+
+    // 初始化页面
+    showPage('home');
 </script>
 </body>
 </html>
