--- a/cn/index.html
+++ b/cn/index.html
@@ -376,7 +376,7 @@
                 newContent = `
                     <div class="card visible">
                         <h2>语言</h2>
-                        <p>此网页还支持<a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
+                        <p>此网页还支持<a href="https://b.joyance.page/cn" class="article-link">中文</a> |<a href="https://b.joyance.page/en" class="article-link">English</a> |<a href="https://b.joyance.page/fr" class="article-link">français</a></p>
                     </div>
                     <div class="card">
                         <h2>绕开过度审查</h2>
