--- a/en/index.html
+++ b/en/index.html
@@ -374,7 +374,7 @@
                 newContent = `
                     <div class="card">
                     <h2>languages</h2>
-                    <p>this is also available with <a href="https://b.joyance.page/cn" class="article-link">中文</a>｜<a href="https://b.joyance.page/en" class="article-link">English</a></p>
+                    <p>this is also available with <a href="https://b.joyance.page/cn" class="article-link">中文</a> |<a href="https://b.joyance.page/en" class="article-link">English</a> |<a href="https://b.joyance.page/fr" class="article-link">français</a></p>
                 </div>
                 <div class="card">
                     <h2>contact</h2>
