--- a/cn/index.html
+++ b/cn/index.html
@@ -396,7 +396,7 @@
                     </div>
                     <div class="card">
                         <h2>版本</h2>
-                        <p>5.0</p>
+                        <p><a href="https://github.com/Joyance-tsui/-blog" class="article-link">5.0.1<a/></p>
                         <p>其他版本：<a href="https://testblog-6yi.pages.dev/#" class="article-link">无js版</a>｜<a href="https://blog.joyance.page/" class="article-link">4.5</a>｜<a href="https://blog-cn.joyance.page/" class="article-link">4.0</a></p>
                     </div>
                 `;
