--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>示例网站</title>
+    <meta charset="UTF-8">
+    <title>嵌入式评论区示例</title>
+    <style>
+        body { font-family: sans-serif; margin: 20px; }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .article {
+            padding: 20px;
+            border: 1px solid #eee;
+            margin-bottom: 20px;
+        }
+
+        /* 调整iframe样式，确保占满可用宽度*/
+        #commentIframe {
+              width: 100%;
+              border: none;
+           min-height: 400px; /*  设置最小高度，根据实际情况调整 */
+        }
+    </style>
 </head>
 <body>
-
-<h1>我的文章标题</h1>
-<p>这是我的文章内容...</p>
-
-<h2>评论区</h2>
-<iframe 
-  src="https://comment.cf-test-b74.workers.dev/embed/your_area_key" 
-  width="100%" 
-  height="600px" 
-  frameborder="0" 
-  style="border: 1px solid #ccc;">
-</iframe>
-
+    <div class="container">
+        <div class="article">
+            <h1>文章标题</h1>
+            <p>这是一篇关于技术、生活或其他主题的文章。 这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。</p>
+             <p>这里是文章内容第二段，用于显示段落分隔。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。</p>
+            <p>这里是文章内容第三段，用于显示段落分隔。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。</p>
+        </div>
+        <h2>评论区</h2>
+        <iframe id="commentIframe" src="YOUR_COMMENT_SYSTEM_URL/embed/YOUR_AREA_KEY"></iframe>
+    </div>
 </body>
 </html>
