--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -32,7 +32,7 @@
             <p>这里是文章内容第三段，用于显示段落分隔。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。这里是一些内容示例文本。</p>
         </div>
         <h2>评论区</h2>
-        <iframe id="commentIframe" src="YOUR_COMMENT_SYSTEM_URL/embed/YOUR_AREA_KEY"></iframe>
+        <iframe id="commentIframe" src="comment.cf-test-b74.workers.dev/embed/test-1"></iframe>
     </div>
 </body>
 </html>
