--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -71,18 +71,49 @@
             font-size: 0.8em;
             vertical-align: super;
         }
-        #comments-container iframe {
-            width: 100%; /* 与父容器保持一致 */
-            border: 1px solid #ccc; /* 示例：添加边框 */
-            margin-top: 20px; /* 示例：增加外边距 */
-        }
 
-        /* 深色主题时调整iframe内容颜色 */
-        @media (prefers-color-scheme: dark) {
+         /* 覆盖评论系统 iframe 的默认样式 */
         #comments-container iframe {
-           filter: invert(0);
-        }
-       }
+            width: 100%;  /* 设置宽度与容器宽度一致 */
+           border: none;  /* 移除默认边框 */
+            margin-top: 20px;   /* 增加外边距 */
+          }
+        /* 评论区样式覆盖 */
+          #comments-container iframe {
+                --bg-color: var(--background-color);
+                --text-color: var(--text-color);
+                 --link-color: #007bff;
+                 --link-hover-color: #0056b3;
+                --input-bg-color: #f8f9fa;
+                --border-color: #ced4da;
+                --button-bg-color: #007bff;
+                --button-text-color: #fff;
+                --button-hover-color: #0056b3;
+                 --notification-bg-color: #f0f0f0;
+                --notification-text-color: #333;
+                 --comment-bg-color: #fff;
+                --comment-text-color: #495057;
+                --hint-color: #6c757d;
+            }
+             @media (prefers-color-scheme: dark) {
+                #comments-container iframe {
+                    --bg-color: #343a40;
+                    --text-color: #fff;
+                  --link-color: #66b1ff;
+                 --link-hover-color: #80c0ff;
+                    --input-bg-color: #495057;
+                    --border-color: #6c757d;
+                    --button-bg-color: #007bff;
+                    --button-text-color: #fff;
+                    --button-hover-color: #0056b3;
+                    --notification-bg-color: #495057;
+                     --notification-text-color: #fff;
+                   --comment-bg-color: #495057;
+                 --comment-text-color:#e9ecef;
+                     --hint-color:#adb5bd;
+                }
+            }
+
     </style>
 </head>
 <body>
@@ -94,26 +125,26 @@
     </div>
     <button class="back-button" onclick="window.close()">返回</button>
 
-   <div id="comments-container"></div>
+    <div id="comments-container"></div>
     <script>
         const commentsContainer = document.getElementById('comments-container');
         const iframe = document.createElement('iframe');
-        iframe.src = 'https://your-worker-domain.com/embed/area/aaab'; // 替换为你评论系统的域名
-         iframe.style.width = '100%';
-          iframe.style.border = 'none';
+        iframe.src = 'https://comment.joyance.page/embed/area/aaab'; // 替换为你评论系统的域名
+        iframe.style.width = '100%';
+        iframe.style.border = 'none';
          iframe.onload = function() {
            iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
          };
         commentsContainer.appendChild(iframe);
          // 监听 iframe 内容高度变化
-         setInterval(() => {
-          if (iframe.contentWindow) {
-            const newHeight = iframe.contentWindow.document.body.scrollHeight;
-            if (iframe.style.height !== newHeight + 'px') {
-              iframe.style.height = newHeight + 'px';
-            }
-          }
-        }, 200);
+        setInterval(() => {
+         if (iframe.contentWindow) {
+           const newHeight = iframe.contentWindow.document.body.scrollHeight;
+           if (iframe.style.height !== newHeight + 'px') {
+             iframe.style.height = newHeight + 'px';
+           }
+         }
+       }, 200);
 
         const article = { title: '开启我的个人博客', content: '这是我的第一个个人博客，没有买单独的域名，<e style="text-decoration: line-through;">功能也不齐全（换行的显示还不支持）</e>（2024/8/19 现已支持），而且文章是直接存在网页前端程序里<e style="text-decoration: line-through;">（太简陋了）</e>（2024/8/19 因为每个文章界面单独作为page页面，这个问题并不存在），但是目前应该够用了。 \n\n将来的打算是，这个平台作为我发布我文章的地方。<e style="text-decoration: line-through;">微信公众号和知乎我也会同步跟进。</e>（2024/8/19 现不打算同步更新） \n\n但是这个博客与公众号和知乎有什么不同的呢？ \n\n主要是他是我根据我的审美设计的 这样的平台虽然小了，但是却很符合我目前写文章的状态 \n\n也是我的上一次总结里说的，凭借自己的爱好 我是没有盈利的 \n\n当然还有一个原因，有可能其他的平台上我说话有些限制 \n\n在这里就可以发一些我不会在知乎上和公众号上发送的内容 \n\n当然有一些的来源是微信朋友圈 \n\n但是微信朋友圈也有审查（虽然我用的是WeChat账号） 而且传播范围也有限 \n\n所以，博客的计划就这样了 \n\n如果你的编程水平（特别是写网页的）不错 愿意帮我完善这个网站 你可以在"联系"那一栏找到我的微信号和邮箱 \n\n如果你只是单纯的阅读，那也别忘了加个收藏 不然以后就找不到了 （以后肯定会挂域名的，到时候另作通知 \n\n2024/7/26', pinned: true };
 
