--- a/article/cn/commenttest.html
+++ b/article/cn/commenttest.html
@@ -190,6 +190,7 @@
         }
 
         async function loadComments() {
+            console.log('loadComments 开始执行');
             const commentsContainer = document.getElementById('comments-container');
             const commentLoading = document.getElementById('comment-loading');
 
@@ -198,15 +199,19 @@
               try {
                   const res = await fetch('https://comment.joyance.page/embed/area/' + commentAreaKey);
                 if (!res.ok) {
-                    commentsContainer.textContent = '评论加载失败';
-                      return;
+                    console.error("Fetch error: ", res);
+                    commentsContainer.textContent = '评论加载失败,HTTP状态码:' + res.status;
+                     return;
                 }
-              const html = await res.text();
-               commentsContainer.innerHTML = html;
+                const html = await res.text();
+                console.log("返回的HTML:", html);
+                commentsContainer.innerHTML = html;
             } catch (error) {
-                   commentsContainer.textContent = '评论加载出错';
+                   console.error("Fetch failed:", error);
+                  commentsContainer.textContent = '评论加载出错，请检查控制台';
             } finally {
                   commentLoading.style.display = 'none';
+                 console.log('loadComments 执行完毕');
              }
           }
 
@@ -215,8 +220,9 @@
             await loadComments();
         };
 
-       
+
     </script>
-      <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.1.1/marked.min.js"></script>
+       <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
 </html>
